# ocaml-mujoco

./: .gitignore  README.md  dune-project  mujoco-env.opam  mujoco.opam
examples/: README.md  ant.ml  basic.ml  derivative.ml  dune  inverted_pendulum.ml  random_policy.ml  simulate.ml
model/: README.md  rodent.xml  rodent_with_floor.xml
src/autogen/: autogen.ml  common.ml  dune  fun_gen.ml  typs_gen.ml  wrapper_gen.ml
src/autostubs/: backup.ml  dune  mujoco_fun_parser.ml  mujoco_typs_parser.ml
src/config/: discover.ml
src/mujoco/: dune  mujoco.ml  mujoco.mli
src/mujoco-env/: ant_v3.ml  antv3.ml  dune  env.ml  inverted_pendulum.ml  mujoco_env.ml
src/stubs/: dune  stubs.ml  typs.ml
src/stubs/types/: dune  types.ml
src/wrapper/: dune  wrapper.ml  wrapper.mli
src/wrapper/stubs/: dune  stubs.ml  typs.ml
src/wrapper/types/: dune  types.ml
