(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name wrapper)
 (public_name mujoco.wrapper)
 (libraries mujoco.stubs mujoco.stubs.types ctypes ctypes.foreign)
 (foreign_stubs
  (language c)
  (names mujoco_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover ../config/discover.exe))
 (action
  (run %{discover})))

(rule
 (targets mujoco_stubs.c mujoco_generated.ml)
 (deps
  (:gen ../gen/gen_stubs.exe))
 (action
  (run %{gen})))
